<resources>
    <string name="app_name">Commer</string>
    <string name="action_settings">Settings</string>
    <string name="setting">تنظیمات</string>
    <string name="about_us">درباره ما</string>
    <string name="version">ورژن برنامه</string>
    <string name="exit">خروج</string>
    <string name="address1">آدرس 1</string>
    <string name="address2">آدرس 2</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="userCode">کد کاربر</string>
    <string name="serverAddress1">آدرس سرور 1</string>
    <string name="serverAddress2">آدرس سرور 2</string>
    <string name="save">ذخیره</string>
    <string name="error_serverAddress1_is_required">مقدار آدرس سرور 1 ضروری است</string>
    <string name="error_serverAddress2_is_required">مقدار آدرس سرور 2 ضروری است</string>
    <string name="error_username_is_required">مقدار نام کاربری ضروری است</string>
    <string name="error_password_is_required">مقدار رمز عبور اجباری است.</string>
    <string name="error_user_code_is_required">مقدار کد کاربری ضروری است</string>
    <string name="error_gps_interval_is_required">مقدار زمان ارسال موقعیت یاب ضروری است</string>
    <string name="error_branch_serial_is_required">مقدار سریال شعبه ضروری است</string>
    <string name="error_branch_serial_is_not_valid">مقدار سریال شعبه صحیح نیست</string>
    <string name="error_stock_serial_is_required">مقدار سریال انبار ضروری است</string>
    <string name="error_stock_serial_is_not_valid">مقدار سریال انبار صحیح نیست</string>
    <string name="error_unknown_system_exception">خطای سیستمی ناشناس</string>
    <string name="message_setting_saved_successfully">اطلاعات تنظیمات با موفقیت ذخیره شد</string>
    <string name="message_connecting_to_server_please_wait">در حال اتصال به سرور، لطفا صبر کنید...</string>
    <string name="message_please_wait">لطفا صبر کنید</string>
    <string name="com.conta.comer.exception.InvalidServerAddressException">مقدار آدرس سرور معتبر نمی باشد</string>
    <string name="com.conta.comer.exception.UsernameNotProvidedForConnectingToServerException">نام کاربری برای اتصال به سرور یافت نشد.</string>
    <string name="com.conta.comer.exception.PasswordNotProvidedForConnectingToServerException">رمز عبور برای اتصال به سرور یافت نشد.</string>
    <string name="com.conta.comer.exception.InvalidUserCodeException">کد کاربر معتبر نمی باشد.</string>
    <string name="com.conta.comer.exception.UnknownSystemException">خطای سیستمی ناشناس</string>
    <string name="com.conta.comer.exception.GotNoResponseFromBackendException">هیچ پاسخی از سرور دریافت نشد</string>
    <string name="com.conta.comer.exception.InvalidResponseFromBackendException">پاسخ دریافتی از سرور معتبر نمی باشد.</string>
    <string name="com.conta.comer.exception.BackendIsNotReachableException">سرور با آدرس های وارد شده، قابل دسترسی نیست.</string>
    <string name="com.conta.comer.exception.TimeOutException">عدم دریافت پاسخ از سرور در زمان مناسب</string>
    <string name="com.conta.comer.exception.UserNotFoundException">کاربر مورد نظر یافت نشد.</string>
    <string name="com.conta.comer.exception.BackendInternalException">خطا در سرور</string>
    <string name="com.conta.comer.exception.InternalServerError">خطا در سرور</string>
    <string name="com.conta.comer.exception.URLNotFoundException">آدرس مورد نظر یافت نشد.</string>
    <string name="com.conta.comer.exception.GPSIsNotEnabledException">GPS فعال نیست.</string>
    <string name="com.conta.comer.exception.SalesmanIdNotProvidedForConnectingToServerException">سریال بازاریاب برای ارسال به سرور یافت نشد.</string>
    <string name="com.conta.comer.exception.SaleOrderNotFoundException">سفارش مورد نظر یافت نشد.</string>
    <string name="com.conta.comer.exception.SaleOrderItemCountExceedExistingException">تعداد یا مقدار وارد شده بیش از موجودی می باشد</string>
    <string name="send_data">ارسال اطلاعات</string>
    <string name="get_data">دریافت اطلاعات</string>
    <string name="message_downloading_data_please_wait">درحال دریافت اطلاعات...</string>
    <string name="data_transfer">انتقال اطلاعات</string>
    <string name="message_transferring_provinces_data">در حال انتقال اطلاعات استان ها...</string>
    <string name="provinces_data_transferred_successfully">اطلاعات استان ها با موفقیت دریافت شد.</string>
    <string name="cities_data_transferred_successfully">اطلاعات شهر ها با موفقیت دریافت شد.</string>
    <string name="message_transferring_cities_data">در حال انتقال اطلاعات شهر ها...</string>
    <string name="message_cities_information_not_found">اطلاعات شهرها یافت نشد. لطفا از قسمت تبادل اطلاعات، اطلاعات لازم
        را دریافت نمایید.
    </string>
    <string name="message_provinces_information_not_foun">اطلاعات استان ها یافت نشد. لطفا از قسمت تبادل اطلاعات، اطلاعات
        لازم را دریافت نمایید.
    </string>
    <string name="message_base_info_transferred_successfully">اطلاعات پایه با موفقیت دریافت شد</string>
    <string name="message_transferring_base_info_data">در حال انتقال اطلاعات پایه..</string>
    <string name="customer_full_name">نام و نام خانوادگی مشتری</string>
    <string name="payment_amount">مبلغ ( ریال )</string>
    <string name="phone_number">شماره تلفن ثابت</string>
    <string name="cell_phone">تلفن همراه</string>
    <string name="address">آدرس</string>
    <string name="please_select_province">لطفا استان مورد نظر را انتخاب نمایید</string>
    <string name="please_select_payment_type">نوع پرداخت</string>
    <string name="please_select_city">لطفا شهر مورد نظر را انتخاب نمایید</string>
    <string name="please_select_customer_activity_type">لطفا نوع فعالیت مشتری را انتخاب نمایید</string>
    <string name="please_select_customer_ownership">لطفا نوع مالکیت مشتری را انتخاب نمایید</string>
    <string name="customer_store_surface">متراژ فروشگاه (به متر)</string>
    <string name="get_customer_location">دریافت مکان مشتری بر روی نقشه</string>
    <string name="message_error_in_loading_or_creating_customer">خطا در ایجاد مشتری</string>
    <string name="message_found_location_successfully">مکان مشتری با موفقیت دریافت شد</string>
    <string name="message_finding_location_timeout">برنامه قادر به دریافت مکان مشتری در زمان مناسب نیست.</string>
    <string name="message_customer_name_is_required">وارد کردن نام مشتری اجباریست.</string>
    <string name="message_address_is_required">وارد کردن آدرس مشتری اجباریست.</string>
    <string name="message_customer_save_successfully">مشتری با موفقیت ذخیره شد</string>
    <string name="message_payment_save_successfully">دریافت وجه با موفقیت ذخیره شد</string>
    <string name="create_date_label">تاریخ ایجاد:</string>
    <string name="error_page_txt">در حال حاظر امکان مشاهده این صفحه وجود ندارد</string>
    <string name="no_result">هیچ نتیجه ای یافت نشد</string>
    <string name="send_status_label">وضعیت ارسال:</string>
    <string name="sent">ارسال شده</string>
    <string name="not_sent">ارسال نشده</string>
    <string name="delete_customer">حذف مشتری</string>
    <string name="message_customer_delete_confirm">آیا از حذف مشتری مطمئن هستید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="message_customer_deleted_successfully">مشتری با موفقیت حذف شد.</string>
    <string name="message_no_item_found">هیچ آیتمی یافت نشد</string>
    <string name="new_customers_data_transferred_successfully">اطلاعات مشتریان جدید با موفقیت ارسال شد</string>
    <string name="updated_customers_data_transferred_successfully">موقعیت مکانی جدید مشتریان با موفقیت ارسال شد</string>
    <string name="payments_data_transferred_successfully">ارسال موفق: %1$s - ارسال ناموفق:%2$s</string>
    <string name="sending_new_customers_data">در حال ارسال اطلاعات مشتریان جدید ...</string>
    <string name="sending_updated_customers_data">در حال ارسال مکان مشتریان ...</string>
    <string name="sending_payments_data">در حال ارسال وجوه دریافتی ...</string>
    <string name="sending_positions_data">در حال ارسال اطلاعات موقعیت یاب ...</string>
    <string name="message_no_new_customer_found">هیچ مشتری جدیدی یافت نشد.</string>
    <string name="message_found_no_new_customer_for_send">هیچ مشتری جدیدی برای ارسال یافت نشد.</string>
    <string name="message_found_no_updated_customer_for_send">هیچ آدرس جدیدی برای ارسال یافت نشد.</string>
    <string name="message_got_no_response">هیچ پاسخی از سرور دریافت نشد.</string>
    <string name="message_exception_in_sending_new_customers">خطا در ارسال مشتریان</string>
    <string name="message_required_setting_for_data_transfer_not_found">تنظیمات لازم برای انتقال اطلاعات یافت نشد. لطفا
        به قسمت تنظیمات مراجعه فرمایید.
    </string>
    <string name="message_device_does_not_have_active_internet_connection">دستگاه به اینترنت متصل نیست. لطفا از برقراری
        اینترنت دستگاه اطمینان حاصل نمایید.
    </string>
    <string name="message_finding_location">در حال دریافت مکان مشتری</string>
    <string name="province_caption">استان:</string>
    <string name="payment_type_caption">نوع پرداخت:</string>
    <string name="city_caption">شهر:</string>
    <string name="activity_type_caption">نوع فعالیت:</string>
    <string name="ownership_type_caption">نوع مالکیت:</string>
    <string name="message_transferring_visit_lines_data">در حال انتقال اطلاعات خطوط بازدید...</string>
    <string name="visitlines_data_transferred_successfully">اطلاعات خطوط بازدید با موفقیت دریافت شد.</string>
    <string name="visit_lines">خطوط بازدید</string>
    <string name="cusomters">مشتریان</string>
    <string name="message_transferring_questionnaires_data">در حال انتقال اطلاعات پرسشنامه ها</string>
    <string name="message_questionnaires_transferred_successfully">اطلاعات پرسشنامه ها با موفقیت دریافت شد.</string>
    <string name="message_exception_in_transferring_questionnaires">خطا در انتقال اطلاعات پرسشنامه ها</string>
    <string name="message_no_goods_group_transferred">هیچ گروه کالایی دریافت نشد.</string>
    <string name="message_exception_in_transferring_goods_groups">خطا در انتقال اطلاعات گروه های کالا</string>
    <string name="message_goods_groups_transferred_successfully">اطلاعات گروه های کالا با موفقیت منتقل شد</string>
    <string name="message_transferring_goods_group_data">در حال انتقال اطلاعات گروه های کالا ...</string>
    <string name="message_no_goods_transferred">هیچ کالایی دریافت نشد.</string>
    <string name="message_exception_in_transferring_goods">خطا در انتقال اطلاعات کالاها</string>
    <string name="message_goods_transferred_successfully">اطلاعات کالاها با موفقیت منتقل شد.</string>
    <string name="message_transferring_goods_data">در حال انتقال اطلاعات کالاها ...</string>
    <string name="message_transferring_rejected_goods_data">در حال انتقال اطلاعات کالاهای مرجوعی ...</string>
    <string name="message_transferring_kpi_data">در حال انتقال اطلاعات عملکرد ...</string>
    <string name="title_cancel">انصراف</string>
    <string name="select_sale_type">نوع فروش را انتخاب کنید</string>
    <string name="tracking_no">شماره پیگیری</string>
    <string name="cheque_date">تاریخ چک:</string>
    <string name="cheque_date_sample">95/5/31</string>
    <string name="cheque_number">شماره چک:</string>
    <string name="cheque_account_number">شماره حساب:</string>
    <string name="cheque_branch">شعبه:</string>
    <string name="cheque_bank">بانک:</string>
    <string name="cheque_account_owner">صاحب چک:</string>
    <string name="cheque_owner_hint">نام و نام خانوادگی</string>
    <string name="user_code">کد کاربر</string>
    <string name="sale_type_label">نوع فروش</string>
    <string name="sub_address">آدرس فرعی</string>
    <string name="main_address">آدرس اصلی</string>
    <string name="gps_interval">زمان ارسال</string>
    <string name="seconds">( ثانیه )</string>
    <string name="gps_setting">تنظیمات موقعیت یاب</string>
    <string name="enable_gps_service">سرویس فعال باشد</string>
    <string name="branch_code">کد شعبه</string>
    <string name="stock_code">کد انبار</string>
</resources>